2008-10-27  Mark Ellis <mark@mpellis.org.uk>

	* src/synce_app_man.c - assume cabs with processor type 0 are ok,
	  extract cabs to subdir in /tmp

2008-10-24  Mark Ellis <mark@mpellis.org.uk>

	* add object-name and dccm-type to device properties
	* add remove_by_prop to device-manager
	* try both {o,hal-}dccm clients, allow for service interruptions,
	  vdccm still optional in properties
	* check for use of G_TYPE_CHECK_TYPE or G_TYPE_CHECK_INSTANCE_TYPE

2008-08-12  Mark Ellis <mark@mpellis.org.uk>

	* src/synce-trayicon.c - display notification instead of dialog
	  for locked WM6 device, remove obsolete function
	* configure.ac.in - add AM_PROG_CC_C_O

2008-07-20  Mark Ellis <mark@mpellis.org.uk>

	* hal-client.c - fixed detection of newly unlocked wm6 device

2008-07-12  Mark Ellis <mark@mpellis.org.uk>

	* added application manager to device info dialog, now
	  depends on liborange etc.

2008-06-24  Mark Ellis <mark@mpellis.org.uk>

	* synce-trayicon.schemas.in - add synce-hal description
	* display N/A in RAM/storage split for WM5
	* correctly delete incorrect password from keyring

2008-05-08  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* man/synce-trayicon.1: Escaped minus sign, as it is currently being
	used as a hyphen; caught by Lintian.

2008-04-16  Mark Ellis <mark@mpellis.org.uk>

	* check for orphaned WM6 items when deleting partnership
	* if delete partnership selected for a sync item, get the parent
	* fix pointer signedness warning in vdccm gtop

2008-04-15  Mark Ellis <mark@mpellis.org.uk>

	* change in sync-engine dbus api for GetPartnerships

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* VERSION: Upped version number.
	* configure.ac.in: Upped deps on libsynce and librapi2.

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* man/synce-trayicon.1: Fixed capitalisation typo.

2008-04-13  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* Removed spec file.

2008-04-03  Mark Ellis <mark@mpellis.org.uk>

	* more fixes to sync-engine partnerships